tests/fail/elaboration/unification/mismatch/fun-type-param-type.snap
stdout = ''
stderr = '''
error: mismatched types
  ┌─ tests/fail/elaboration/unification/mismatch/fun-type-param-type.fathom:3:43
  │
3 │ fun (A : Type) -> fun (a : A) -> fun (b : a) -> A
  │                                           ^ type mismatch, expected `A`, found `Type`
  │
  = expected `A`
       found `Type`

'''
